# serenity

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .test_all.sh  .test_simple.sh  .travis-install.sh  .travis-libsodium.sh  .travis.sh  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  SELFBOT_ADDITIONS.md  azure-build-examples.yml  azure-pipelines.yml  azure-template-unix.yml  azure-template-win.yml  azure-template.yml  build.rs  clippy.toml  docs.py  index.html  rustfmt.toml
.cargo/: config.toml
command_attr/: Cargo.toml
command_attr/src/: attributes.rs  consts.rs  lib.rs  structures.rs  util.rs
examples/: 01_basic_ping_bot.rs  02_transparent_guild_sharding.rs  03_struct_utilities.rs  05_user_login.rs  06_command_framework.rs  07_voice.rs  Cargo.toml  Makefile.toml  README.md
examples/01_basic_ping_bot/: Cargo.toml
examples/01_basic_ping_bot/src/: main.rs
examples/02_transparent_guild_sharding/: Cargo.toml
examples/02_transparent_guild_sharding/src/: main.rs
examples/03_struct_utilities/: Cargo.toml
examples/03_struct_utilities/src/: main.rs
examples/04_message_builder/: Cargo.toml
examples/04_message_builder/src/: main.rs
examples/05_command_framework/: Cargo.toml
examples/05_command_framework/src/: main.rs
examples/05_user_login/: Cargo.toml
examples/05_user_login/src/: main.rs
examples/06_command_framework/: Cargo.toml
examples/06_command_framework/src/: main.rs
examples/06_voice/: Cargo.toml
examples/06_voice/src/: main.rs
examples/07_sample_bot_structure/: Cargo.toml
examples/07_sample_bot_structure/src/: main.rs
examples/07_voice/: Cargo.toml
examples/07_voice/src/: main.rs
examples/08_env_logging/: Cargo.toml
examples/08_env_logging/src/: main.rs
examples/08_sample_bot_structure/: Cargo.toml
examples/08_sample_bot_structure/src/: main.rs
examples/08_search/: Cargo.toml
examples/08_search/src/: main.rs
examples/09_shard_manager/: Cargo.toml
examples/09_shard_manager/src/: main.rs
examples/10_voice_receive/: Cargo.toml
examples/10_voice_receive/src/: main.rs
examples/11_create_message_builder/: Cargo.toml
examples/11_create_message_builder/src/: main.rs
examples/12_collectors/: Cargo.toml
examples/12_collectors/src/: main.rs
examples/12_multiple_event_handlers/: Cargo.toml
examples/12_multiple_event_handlers/src/: main.rs
examples/12_timing_and_events/: Cargo.toml
examples/12_timing_and_events/src/: main.rs
examples/13_gateway_intents/: Cargo.toml
examples/13_gateway_intents/src/: main.rs
examples/13_voice_events/: Cargo.toml
examples/13_voice_events/src/: main.rs
examples/14_simple_framework/: Cargo.toml
examples/14_simple_framework/src/: main.rs
examples/14_voice_events_queue/: Cargo.toml
examples/14_voice_events_queue/src/: main.rs
examples/15_voice_storage/: Cargo.toml
examples/dev_shard_manager/: Cargo.toml
examples/dev_voice/: Cargo.toml
examples/e01_basic_ping_bot/: Cargo.toml
examples/e02_transparent_guild_sharding/: Cargo.toml
examples/e03_struct_utilities/: Cargo.toml
examples/e04_message_builder/: Cargo.toml
examples/e05_command_framework/: Cargo.toml
examples/e05_sample_bot_structure/: Cargo.toml
examples/e06_env_logging/: Cargo.toml
examples/e06_sample_bot_structure/: .env.example  Cargo.toml
examples/e06_voice/: Cargo.toml
examples/e07_env_logging/: Cargo.toml  Makefile.toml
examples/e07_sample_bot_structure/: Cargo.toml
examples/e07_shard_manager/: Cargo.toml
examples/e08_create_message_builder/: Cargo.toml
examples/e08_env_logging/: Cargo.toml
examples/e08_shard_manager/: Cargo.toml
examples/e09_collectors/: Cargo.toml
examples/e09_create_message_builder/: Cargo.toml
examples/e09_shard_manager/: Cargo.toml
examples/e10_collectors/: Cargo.toml
examples/e10_gateway_intents/: Cargo.toml
examples/e10_voice_receive/: Cargo.toml
examples/e11_create_message_builder/: Cargo.toml
examples/e11_gateway_intents/: Cargo.toml
examples/e11_global_data/: Cargo.toml
examples/e12_collectors/: Cargo.toml
examples/e12_global_data/: Cargo.toml
examples/e12_parallel_loops/: Cargo.toml
examples/e12_timing_and_events/: Cargo.toml
examples/e13_gateway_intents/: Cargo.toml
examples/e13_parallel_loops/: Cargo.toml  Makefile.toml
examples/e13_sqlite_database/: Cargo.toml
examples/e14_message_components/: Cargo.toml
examples/e14_slash_commands/: Cargo.toml  README.md
examples/e14_voice_events_queue/: Cargo.toml
examples/e15_parallel_loops/: Cargo.toml
examples/e15_simple_dashboard/: Cargo.toml
examples/e15_sqlite_database/: .gitignore  Cargo.toml  README.md  pre-commit
examples/e15_voice_storage/: Cargo.toml
examples/e15_webhook/: Cargo.toml
examples/e16_interactions_endpoint/: Cargo.toml
examples/e16_message_components/: Cargo.toml
examples/e16_sqlite_database/: Cargo.toml  README.md  database.sqlite  sqlx-data.json
examples/e16_voice_events_queue/: Cargo.toml
examples/e17_message_components/: Cargo.toml
examples/e17_voice_storage/: Cargo.toml
examples/e17_webhook/: Cargo.toml
examples/e18_interactions_endpoint/: Cargo.toml
examples/e18_webhook/: Cargo.toml
examples/e19_interactions_endpoint/: Cargo.toml
examples/testing/: Cargo.toml
serenity-voice-model/: Cargo.toml  rustfmt.toml
serenity-voice-model/benches/: de.rs
serenity-voice-model/src/: constants.rs  event.rs  id.rs  lib.rs  opcode.rs  protocol_data.rs  speaking_state.rs  util.rs
songbird/: Cargo.toml  README.md  build.rs  rustfmt.toml
songbird/benches/: mixing.rs
songbird/examples/: README.md
songbird/src/: connection.rs  connection_info.rs  constants.rs  crypto.rs  error.rs  events.rs  handler.rs  id.rs  info.rs  lib.rs  manager.rs  payload.rs  serenity.rs  shards.rs  test_utils.rs  timer.rs  ws.rs
songbird/utils/: Cargo.toml  README.md
voice-model/: Cargo.toml  rustfmt.toml
voice-model/benches/: de.rs
voice-model/src/: close_code.rs  constants.rs  id.rs  lib.rs  opcode.rs  payload.rs  protocol_data.rs  speaking_state.rs  util.rs
(+7651 files in other folders)
