[package]
name = "command_attr"
version = "0.1.3"
authors = ["acdenisSK <acdenissk69@gmail.com>"]
edition = "2018"
description = "Procedural macros for command creation for the Serenity library."
license = "ISC"

[lib]
proc-macro = true

[dependencies]
quote = "^0.6"
syn = { version = "^0.15", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^0.4"
