[package]
name = "command_attr"
version = "0.2.0"
authors = ["acdenisSK <acdenissk69@gmail.com>"]
edition = "2018"
description = "Procedural macros for command creation for the Serenity library."
license = "ISC"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^1.0"
