[package]
name = "command_attr"
version = "0.5.2"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2021"
description = "Procedural macros for command creation for the Serenity library."
license = "ISC"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^1.0.60"
