[workspace]
members = [
    "e01_basic_ping_bot",
    "e02_transparent_guild_sharding",
    "e03_struct_utilities",
    "e04_message_builder",
    "e05_command_framework",
    "e06_sample_bot_structure",
    "e07_env_logging",
    "e08_shard_manager",
    "e09_create_message_builder",
    "e10_collectors",
    "e11_gateway_intents",
    "e12_global_data",
    "e13_parallel_loops",
]
