[package]
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
description = "A Rust library for the Discord voice API."
documentation = "https://docs.rs/songbird"
edition = "2018"
homepage = "https://github.com/serenity-rs/serenity"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "api", "rtp", "audio"]
license = "ISC"
name = "songbird"
readme = "README.md"
repository = "https://github.com/serenity-rs/serenity.git"
version = "0.1.0"

[dependencies]
dashmap = "4.0.0-rc6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-futures = "0.2"

[dependencies.async-trait]
optional = true
version = "0.1"

[dependencies.async-tungstenite]
default-features = false
features = ["tokio-runtime"]
optional = true
version = "0.8"

[dependencies.audiopus]
optional = true
version = "0.2"

[dependencies.byteorder]
optional = true
version = "1"

[dependencies.discortp]
features = ["discord-full"]
optional = true
version = "0.2"

[dependencies.flume]
optional = true
version = "0.9"

[dependencies.futures]
version = "0.3"

[dependencies.parking_lot]
optional = true
version = "0.11"

[dependencies.rand]
optional = true
version = "0.7"

[dependencies.serenity]
optional = true
features = ["voice", "gateway"]
path = "../"

[dependencies.serenity-voice-model]
path = "../serenity-voice-model"
optional = true

[dependencies.spin_sleep]
optional = true
version = "1"

[dependencies.streamcatcher]
optional = true
version = "0.1"

[dependencies.tokio]
optional = true
version = "0.2"
default-features = false

[dependencies.twilight-gateway]
optional = true
version = "0.1"
default-features = false

[dependencies.twilight-model]
optional = true
version = "0.1"
default-features = false

[dependencies.url]
optional = true
version = "2"

[dependencies.xsalsa20poly1305]
optional = true
version = "0.5"

[features]
default = [
    "serenity-rustls",
    "driver",
    "gateway"
]
gateway = []
driver = [
    "async-trait",
    "audiopus",
    "byteorder",
    "discortp",
    "flume",
    "parking_lot",
    "rand",
    "serenity-voice-model",
    "spin_sleep",
    "streamcatcher",
    "tokio/fs",
    "tokio/io-util",
    "tokio/net",
    "tokio/rt-core",
    "tokio/process",
    "url",
    "xsalsa20poly1305",
]
rustls = ["async-tungstenite/async-tls"]
native = ["async-tungstenite/tokio-native-tls"]
serenity-rustls = ["serenity/rustls_backend", "rustls"]
serenity-native = ["serenity/native_tls_backend", "native"]
twilight-rustls = ["twilight", "twilight-gateway/rustls", "rustls"]
twilight-native = ["twilight", "twilight-gateway/native", "native"]
twilight = ["twilight-model"]

[package.metadata.docs.rs]
all-features = true
