[package]
name = "01_basic_ping_bot"
edition = "2018"
version = "0.1.0"
authors = ["my name <my@email.address>"]

[dependencies]
serde_json = "1"
serenity = { path = "../../", default-features = true }
tokio = "0.1"
env_logger = "0.5"
tungstenite = "0.6"

[dependencies.futures-preview]
features = ["compat", "tokio-compat"]
version = "0.3.0-alpha.6"
