[package]
name = "01_basic_ping_bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio  = { version = "0.2", features = ["macros"] }
pretty_env_logger = "0.4"
log = "0.4"
