[package]
name = "12_timing_and_events"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend", "collector"]
path = "../../"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
