[package]
name = "e05_command_framework"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dashmap = "5"

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
path = "../../"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
