[package]
name = "e05_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["collector", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
