[package]
name = "e06_env_logging"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
features = ["gateway", "rustls_backend"]
path = "../../"
