[package]
name = "e07_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
path = "../../"
