[package]
name = "e07_shard_manager"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

[dependencies.serenity]
default-features = false
features = ["gateway", "model", "rustls_backend"]
path = "../../"
