[package]
name = "e09_shard_manager"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-core", "time"] }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
path = "../../"
