[package]
name = "e12_parallel_loops"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["gateway", "model", "cache", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
