[package]
name = "e15_simple_dashboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rillrate = "0.41"
notify = "=5.0.0-pre.14"

tracing = "0.1"
tracing-subscriber = "0.2"

webbrowser = "0.5"

[dependencies.serenity]
path = "../../"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[features]
post-ping = []
